fnordmetric-core/web/css/fnordmetric.core.css
/* ... */
a.button:active, a.button.dark:hover{
  background:#ddd;
}

a.button.dark:active{
  background:#ccc;
}

.navbar a.button.datepicker, a.button.datepicker_sa{
  padding-left:0;
  padding-right:10px;
  margin-right:15px;
}

.navbar a.button.datepicker .date, a.button.datepicker_sa .date{
  background: white;
  padding: 0 13px;
  border-right: 1px solid #DDD;
  box-shadow: 0 0 2px #ddd inset;
  font-style:italic;
  display:inline-block;
  margin-right:10px;
  color:#555;
}

.navbar a.button.datepicker i, a.button.datepicker_sa i{
  font-size: 17px;
  float: right;
  margin-top: 0px;
}

a.button.datepicker_sa {
  margin-top:0;
  height: 35px;
  float:none;
  background-color: #F4F4F4;
  background-image: -webkit-linear-gradient(top, #ffffff, #e9e9e9);
  background-image: -moz-linear-gradient(top, #ffffff, #e9e9e9);
  background-image: -ms-linear-gradient(top, #ffffff, #e9e9e9);
  background-image: -o-linear-gradient(top, #ffffff, #e9e9e9);
  background-image: linear-gradient(top, #ffffff, #e9e9e9);
  filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#ffffff', EndColorStr='#e9e9e9');
}

a.button.datepicker_sa:hover {
  background: #f4f4f4;
}

a.button.datepicker_sa .date {
  height: 35px;
  line-height: 37px;
}

a.button.datepicker_sa i {
  margin-top:7px;
}

.navbar + h1{
  margin-top:22px;
}

.navbar .button.navbutton{
  padding-right:13px;
}

.navbar .navbutton i{
  margin-left:-7px;
  margin-right:6px;
  display:inline-block;
}


.navbar a.button:first-child{
  margin-right:38px;
}

.picto{ display:block; height:14px; width:14px; float:left; opacity:0.7; }
.picto.piechart{ background-position:-42px -173px; width:9px; margin-right:5px; }

#viewport{ float:left; margin-left:220px; min-width:790px; }
#viewport .viewport_inner{ margin:0 6px; background:#fff; padding-top:1px; padding-bottom:1px; }

#viewport, #sidebar ul li:hover, #sidebar ul li.active{ background:#24272c; box-shadow: inset 0px 1px 2px 1px rgba(0, 0, 0, 0.4); }

.widget{ min-height:100px; border-right:1px solid #ececec; float:left; }
.widget.full_width{ border-right:none; }
.widget .inner{ margin:20px; }
/*.widget .headbar{ margin-bottom:30px; }*/

.ui_value.large{ font-size:18px; font-weight:bold; color:#333; }
.ui_value.left{ float:left; }

.ui_toplist{ min-height:300px; }
.ui_toplist.loading{ opacity:0.5; background:url('/img/loader.gif') no-repeat center center;  }

.ui_toplist .toplist_item{ border-bottom:1px solid #dedede; height:42px; display:block; }
.ui_toplist .toplist_item:hover{ background:#fff; }
.ui_toplist .toplist_item .title{ float:left; line-height:42px; margin-left:20px; font-size:13px; color:#333; }
.ui_toplist .toplist_item .value{ float:right; line-height:42px; margin-right:20px; font-size:13px; font-weight:bold; width:70px; color:#666; }
.ui_toplist .toplist_item .value.large{ width:110px; }
.ui_toplist .toplist_item .percent{ float:right; line-height:42px; margin-right:30px; font-size:18px; font-weight:bold; color:#333; width:80px; white-space:nowrap; overflow:hidden; }

.ui_toplist .toplist_item .trend{ float:right; line-height:42px; margin-right:30px; font-size:18px; font-weight:bold; color:#333; width:70px; white-space:nowrap; }

.ui_toplist .toplist_item .ui_trend{ margin-top:10px; }
.ui_toplist .toplist_item .trend .ui_trend{ font-size:18px; padding:4px 5px 5px 5px; margin-top:6px; }

.ui_toplist .searchbar{ background:#efefef; border-bottom: 1px solid #DDD; padding:10px 17px; }
.ui_toplist.clickable .toplist_item:hover{ background:#efefef; cursor:pointer; }

.ui_toplist.clickable .toplist_item.active{
background: #7bb2ff; /* Old browsers */
background: -moz-linear-gradient(top, #7bb2ff 0%, #609ff8 44%, #4089ee 100%);
background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#7bb2ff), color-stop(44%,#609ff8), color-stop(100%,#4089ee)); /* Chrome,Safari4+ */
background: -webkit-linear-gradient(top, #7bb2ff 0%,#609ff8 44%,#4089ee 100%);
background: -o-linear-gradient(top, #7bb2ff 0%,#609ff8 44%,#4089ee 100%);
background: -ms-linear-gradient(top, #7bb2ff 0%,#609ff8 44%,#4089ee 100%);
background: linear-gradient(top, #7bb2ff 0%,#609ff8 44%,#4089ee 100%);

border-top:1px solid #5F94DE;
border-bottom:1px solid #4E7DBF;

margin-top:-1px;

line-height:41px;

box-shadow:0 1px 1px rgba(255,255,255,0.5) inset;
}

.ui_toplist.clickable .toplist_item.active .title,
.ui_toplist.clickable .toplist_item.active .value,
.ui_toplist.clickable .toplist_item.active .percent {
  color:#fff;
}


.headbar {

  height:36px;
background-color: #F4F4F4;
background-image: -webkit-gradient(linear, left top, left bottom, from(#f4f4f4), to(#e9e9e9));
background-image: -webkit-linear-gradient(top, #f4f4f4, #e9e9e9);
background-image: -moz-linear-gradient(top, #f4f4f4, #e9e9e9);
background-image: -ms-linear-gradient(top, #f4f4f4, #e9e9e9);
background-image: -o-linear-gradient(top, #f4f4f4, #e9e9e9);
background-image: linear-gradient(top, #f4f4f4, #e9e9e9);
filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#f4f4f4', EndColorStr='#e9e9e9');
padding: 0 25px;
border-bottom: 1px solid #C9C9C9;
border-top: 1px solid #d0d0d0;
font-size:13px;
line-height:29px;
text-shadow: 1px 0px 2px rgba(255, 255, 255, 1);
-moz-text-shadow: 1px 0px 2px rgba(255,255,255,1);
-webkit-text-shadow: 1px 0px 2px rgba(255,255,255,1);
  overflow:hidden;
}

.headbar.small{ height:29px; }

.headbar h2{ line-height:37px; margin:0; float:left; font-size:14px; }
.headbar .datepicker{ background:#fff; border:1px solid #999; height:20px; padding:0 7px; float:right; margin:8px -1px; min-width:100px; font-size:11px; font-style:italic; line-height:21px; }
.headbar .button.mr{ margin-right:16px; }
.headbar .button.ml{ margin-left:16px; }
/* ... */

